Update dependencies for Fall 2021.